--- a/portfolio.html
+++ b/portfolio.html
@@ -13,12 +13,14 @@
     <!-- <div class="mainContent"> -->
 
       <header>
-        <h1>Muntasir Biojid</h1>
-        <nav>
-          <a href="./index.html">About</a> |
-          <a href="./portfolio.html">Portfolio</a> |
-          <a href="./contact.html">Contact</a>
-        </nav>
+        <div class="headerContent">
+          <h1>Muntasir Biojid</h1>
+          <nav>
+            <a href="./index.html">About</a> |
+            <a href="./portfolio.html">Portfolio</a> |
+            <a href="./contact.html">Contact</a>
+          </nav>
+        </div>
       </header>
 
       <section>
@@ -26,10 +28,28 @@
           <h2>Portfolio</h2>
         </header>
         <hr>
-        <p>
-          <img src="./assets/images/profilePic.jpg" alt"Profile Picture" height="200" width="300">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
+        <table>
+          <tr>
+            <td>
+              <img src="./assets/images/python-games.jpg" alt"Python Games">
+              <div class="workTitle">This is my div</div>
+            </td>
+            <td>
+              <img src="./assets/images/python-games.jpg" alt"Python Games">
+              <div class="workTitle">This is my div</div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./assets/images/python-games.jpg" alt"Python Games">
+              <div class="workTitle">This is my div</div>
+            </td>
+            <td>
+              <img src="./assets/images/python-games.jpg" alt"Python Games">
+              <div class="workTitle">This is my div</div>
+            </td>
+          </tr>
+        </table>
       </section>
 
       <footer>
