updated the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,22 +31,32 @@
         <table>
           <tr>
             <td>
-              <img src="./assets/images/python-games.jpg" alt"Python Games">
-              <div class="workTitle">This is my div</div>
+              <img src="./assets/images/asteroids.png" alt="Python Games Link 1">
+              <div class="workTitle">Python Games 1</div>
             </td>
             <td>
-              <img src="./assets/images/python-games.jpg" alt"Python Games">
-              <div class="workTitle">This is my div</div>
+              <img src="./assets/images/tictactoe.png" alt"Python Games Link 2">
+              <div class="workTitle">Python Games 2</div>
             </td>
           </tr>
           <tr>
             <td>
-              <img src="./assets/images/python-games.jpg" alt"Python Games">
-              <div class="workTitle">This is my div</div>
+              <img src="./assets/images/python.jpg" alt="Python Games/Projects">
+              <div class="workTitle">Python Games/Projects</div>
             </td>
             <td>
-              <img src="./assets/images/python-games.jpg" alt"Python Games">
-              <div class="workTitle">This is my div</div>
+              <img src="./assets/images/java.jpeg" alt="Java Games/Projects">
+              <div class="workTitle">Java Games/Projects</div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./assets/images/java.jpeg" alt="Web Development">
+              <div class="workTitle">Web Development</div>
+            </td>
+            <td>
+              <img src="./assets/images/loading2.gif" alt="Java Games/Projects">
+              <div class="workTitle">Future Work?</div>
             </td>
           </tr>
         </table>
