updated the portfolio page further

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,13 +45,13 @@
               <div class="workTitle">Python Games/Projects</div>
             </td>
             <td>
-              <img src="./assets/images/java.jpeg" alt="Java Games/Projects">
+              <img src="./assets/images/java.png" alt="Java Games/Projects">
               <div class="workTitle">Java Games/Projects</div>
             </td>
           </tr>
           <tr>
             <td>
-              <img src="./assets/images/java.jpeg" alt="Web Development">
+              <img src="./assets/images/web.png" alt="Web Development">
               <div class="workTitle">Web Development</div>
             </td>
             <td>
